data/derived/comb/progs/unify/prog7493.ml.out
Characters 145-160:
  | Cosine e' -> cos (3.142 *. exprToString e')
                               ^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
